tests/ui/too_many_tokens.stderr
error: Unexpected input
 --> tests/ui/too_many_tokens.rs:3:26
  |
3 | #[make_dst_factory(no_std, XXX)]
  |                          ^
